For better portability get rid of commons-io dependency #9